--- a/scheduler/src/main/resources/templates/manage/class.html
+++ b/scheduler/src/main/resources/templates/manage/class.html
@@ -13,20 +13,37 @@
             width: 1.5em;
             height: 1.5em;
         }
+
+        body { background-color: lightgoldenrodyellow; }
+
+        .form-check-label input {
+            margin-right: 10px;
+        }
+
+        .board{
+            background-color: white;
+            padding: 1em;
+        }
+
+
     </style>
 </head>
 <body>
 <div class="container">
-    <div th:object="${classList}">
-        <table>
-            <tr>
-                <th><a th:href ="@{/logout}"><button class="btn btn-primary"
-                                                     sec:authorize="isAuthenticated()">Logout</button></a></th>
-                <th><a th:href ="@{/admin/teacherList}"><button class="btn btn-primary"
-                                                                sec:authorize="hasRole('ROLE_ADMIN')">관리하기</button></a></th>
-            </tr>
-        </table>
-        <table class="table caption-top table-responsive" id="jb-table">
+    <div class="py-2">
+        <div class="board rounded-3 border border-2">
+        <div th:object="${classList}">
+            <table>
+                <tr>
+                    <th><a th:href ="@{/logout}"><button class="btn btn-primary"
+                                                         sec:authorize="isAuthenticated()">Logout</button></a></th>
+                    <th><a th:href ="@{/admin/teacherList}"><button class="btn btn-primary"
+                                                                    sec:authorize="hasRole('ROLE_ADMIN')">관리하기</button></a></th>
+                    <th><a th:href ="@{/logout}"><button class="btn btn-primary text-end"
+                                                         sec:authorize="isAuthenticated()">비밀번호 변경</button></a></th>
+                </tr>
+            </table>
+            <table class="table caption-top table-responsive" id="jb-table">
             <caption>List of users</caption>
             <thead id="header">
                 <tr>
@@ -70,8 +87,10 @@
                 <tr>
                 </tr>
             </tfoot>
-        </table>
+            </table>
+        </div>
     </div>
+</div>
 </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
