--- a/scheduler/src/main/resources/templates/cert/authNum.html
+++ b/scheduler/src/main/resources/templates/cert/authNum.html
@@ -49,10 +49,10 @@
         <div class="py-2">
             <div class="board rounded-3 border border-2">
                 <h1> 비밀번호 찾기 </h1>
-                <label for="teacherId"></label>
-                <input id="teacherId"
-                       name="teacherId" th:type="hidden"
-                       th:value="${teacherId.getTeacherId()}"/>
+                <label for="username"></label>
+                <input id="username"
+                       name="username" th:type="hidden"
+                       th:value="${username.getUsername()}"/>
 
                 <label for="authNum"></label>
                 <input class="form-control" id="authNum" placeholder="인증번호를 입력해 주세요"
