--- a/scheduler/src/main/resources/templates/join.html
+++ b/scheduler/src/main/resources/templates/join.html
@@ -48,9 +48,9 @@
                 <!--아이디-->
                 <label for="teacherId"></label>
                 <input class="form-control" id="teacherId" placeholder="아이디를 입력해주세요"
-                       th:errorclass="field-error" th:field="*{teacherId}"
+                       th:errorclass="field-error" th:field="*{username}"
                        type="text">
-                <div class="field-error" th:errors="*{teacherId}"></div>
+                <div class="field-error" th:errors="*{username}"></div>
                 <!--중복 아이디 검사-->
                 <div class="field-error" th:text="${errorMessage}"></div>
 
