Readme, Index, ClassList, password

--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -65,6 +65,13 @@
         <!--학생 이름-->
         <div class="py-2">
             <div class="board rounded-3 border border-2">
+                <table>
+                    <tr>
+                        <th><a th:href = "@{/search/}">
+                            <button class="btn btn-primary" type="button">수업 조회 및 변경</button>
+                        </a></th>
+                    </tr>
+                </table><br><br>
                 <h1> 1학기 시간표 신청 </h1>
                 <p>1 : 00 ~ 7 : 00 (마지막수업 6시)<br>
                     수업은 아이의 당일 학습능력에 따라 <br>
