--- a/scheduler/src/main/resources/templates/cert/authNum.html
+++ b/scheduler/src/main/resources/templates/cert/authNum.html
@@ -52,7 +52,7 @@
                 <label for="username"></label>
                 <input id="username"
                        name="username" th:type="hidden"
-                       th:value="${username.getUsername()}"/>
+                       th:value="${username}"/>
 
                 <label for="authNum"></label>
                 <input class="form-control" id="authNum" placeholder="인증번호를 입력해 주세요"
