--- a/scheduler/src/main/resources/templates/cert/updateCompletion.html
+++ b/scheduler/src/main/resources/templates/cert/updateCompletion.html
@@ -35,6 +35,7 @@
         <div class="board rounded-3 border border-2">
             <h1> 회원 정보가 변경되었습니다. </h1>
             <p>문의사항이 있을시 관리자에게 문의해주세요.</p>
+            <p><a th:href="@{/manage/class}">수업 관리 화면으로</a></p>
         </div>
     </div>
 </div>
