--- a/scheduler/src/main/resources/templates/manage/class.html
+++ b/scheduler/src/main/resources/templates/manage/class.html
@@ -38,9 +38,11 @@
                     <th><a th:href ="@{/logout}"><button class="btn btn-primary"
                                                          sec:authorize="isAuthenticated()">Logout</button></a></th>
                     <th><a th:href ="@{/admin/teacherList}"><button class="btn btn-primary"
-                                                                    sec:authorize="hasRole('ROLE_ADMIN')">관리하기</button></a></th>
+                                                                    sec:authorize="hasRole('ROLE_ADMIN')">교사 관리</button></a></th>
                     <th><a th:href ="@{/cert/changePassword}"><button class="btn btn-primary text-end"
-                                                         sec:authorize="isAuthenticated()">비밀번호 변경</button></a></th>
+                                                                      sec:authorize="isAuthenticated()">비밀번호 변경</button></a></th>
+                    <th><a th:href ="@{/cert/changeEmail}"><button class="btn btn-primary"
+                                                                    sec:authorize="hasRole('ROLE_ADMIN')">이메일 변경</button></a></th>
                 </tr>
             </table>
             <table class="table caption-top table-responsive" id="jb-table">
