--- a/scheduler/src/main/resources/templates/manage/class.html
+++ b/scheduler/src/main/resources/templates/manage/class.html
@@ -24,8 +24,6 @@
             background-color: white;
             padding: 1em;
         }
-
-
     </style>
 </head>
 <body>
@@ -35,15 +33,16 @@
         <div th:object="${classList}">
             <table>
                 <tr>
-                    <th><a th:href ="@{/logout}"><button class="btn btn-primary"
-                                                         sec:authorize="isAuthenticated()">Logout</button></a></th>
-                    <th><a th:href ="@{/cert/changePassword}"><button class="btn btn-primary text-end"
-                                                                      sec:authorize="isAuthenticated()">비밀번호 변경</button></a></th>
-                    <th><a th:href ="@{/cert/changeEmail}"><button class="btn btn-primary"
-                                                                    sec:authorize="isAuthenticated()">이메일 변경</button></a></th>
                     <th><a th:href ="@{/admin/teacherList}"><button class="btn btn-primary"
                                                                     sec:authorize="hasRole('ROLE_ADMIN')">교사 관리</button></a></th>
-
+                    <th><a th:href ="@{/cert/changeEmail}"><button class="btn btn-primary"
+                                                                   sec:authorize="hasRole('ROLE_TEACHER')">이메일 변경</button></a></th>
+                    <th><a th:href ="@{/cert/changePassword}"><button class="btn btn-primary"
+                                                                       sec:authorize="hasRole('ROLE_TEACHER')">비밀번호 변경</button></a></th>
+                    <th><a th:href ="@{/manage/studentList}"><button class="btn btn-primary"
+                                                         sec:authorize="isAuthenticated()">학생 명부</button></a></th>
+                    <th><a th:href ="@{/logout}"><button class="btn btn-primary"
+                                                         sec:authorize="isAuthenticated()">Logout</button></a></th>
                 </tr>
             </table>
             <table class="table caption-top table-responsive" id="jb-table">
@@ -97,7 +96,7 @@
                     url: '/manage/delete',
                     method: 'POST',
                     data: { deleteClassList : studentName },
-                    success: function(response) {
+                    success: function() {
                         alert('삭제되었습니다.');
                         location.reload();
                     },
