--- a/scheduler/src/main/resources/templates/admin/teacherList.html
+++ b/scheduler/src/main/resources/templates/admin/teacherList.html
@@ -55,6 +55,7 @@
                     <th scope="col">승인 상태</th>
                     <th scope="col">승인</th>
                     <th scope="col">승인 취소</th>
+                    <th scope="col">삭제</th>
                 </tr>
                 </thead>
                 <tbody th:each="teacher : ${teacherList}">
@@ -69,6 +70,10 @@
                     <td>
                         <button class="btn btn-primary cancel-button"
                                      th:value="${teacher.getUsername()}">승인 취소</button>
+                    </td>
+                    <td>
+                        <button class="btn btn-primary delete-button"
+                                th:value="${teacher.getUsername()}">삭제</button>
                     </td>
                 </tr>
                 </tbody>
@@ -120,6 +125,26 @@
                     },
                     error: function() {
                         alert('승인 취소에 실패했습니다. 다시 시도해주세요.');
+                    }
+                });
+            }
+        });
+
+        $('.delete-button').click(function() {
+            const teacherId = $(this).attr('value');
+            const confirmation = confirm(teacherId + '을(를) 삭제하시겠습니까?');
+
+            if (confirmation) {
+                $.ajax({
+                    url: '/admin/delete',
+                    method: 'POST',
+                    data: { username : teacherId },
+                    success: function() {
+                        alert('삭제 되었습니다');
+                        location.reload();
+                    },
+                    error: function() {
+                        alert('삭제에 실패했습니다. 다시 시도해주세요.');
                     }
                 });
             }
