--- a/scheduler/src/main/resources/templates/manage/class.html
+++ b/scheduler/src/main/resources/templates/manage/class.html
@@ -88,26 +88,5 @@
 </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script>
-    $(document).ready(function() {
-        $('.delete-button').click(function() {
-            var studentName = $(this).attr('value');
-            var confirmation = confirm('정말로 ' + studentName + '을(를) 삭제하시겠습니까?');
-            if (confirmation) {
-                $.ajax({
-                    url: '/manage/delete',
-                    method: 'POST',
-                    data: { deleteClassList : studentName },
-                    success: function() {
-                        alert('삭제되었습니다.');
-                        location.reload();
-                    },
-                    error: function(xhr, status, error) {
-                        console.log(error);
-                    }
-                });
-            }
-        });
-    });
-</script>
+<script src="/js/class.js"></script>
 </html>
