--- a/scheduler/src/main/resources/templates/manage/registerStudentInformation.html
+++ b/scheduler/src/main/resources/templates/manage/registerStudentInformation.html
@@ -26,7 +26,7 @@
             text-align: center;
         }
 
-        .error-message{
+        .error-message, .field-error{
             color: #dc3545;
         }
 
@@ -49,26 +49,44 @@
                 <input class="form-control" id="studentName" placeholder="학생 이름을 입력해 주세요"
                        th:errorclass="field-error" th:field="*{studentName}"
                        type="text">
+                <div class="error-message" th:if="${studentInformation}">
+                    <p th:text="${studentInformation}"></p>
+                </div>
+                <div class="field-error" th:errors="*{studentName}"></div>
+
 
                 <label for="studentPhoneNumber"></label>
-                <input class="form-control" id="studentPhoneNumber" placeholder="학생 휴대전화 번호를 입력해 주세요" th:maxlength="11"
+                <input class="form-control" id="studentPhoneNumber" placeholder="학생 휴대전화 번호를 입력해 주세요" th:maxlength="13"
                        th:errorclass="field-error" th:field="*{studentPhoneNumber}"
+                       oninput="autoHyphen(this)"
                        type="text">
+                <div class="field-error" th:errors="*{studentPhoneNumber}"></div>
+
 
                 <label for="studentAddress"></label>
+                <div style="display: flex; align-items: center">
                 <input class="form-control" id="studentAddress" placeholder="주소를 입력해 주세요"
                        th:errorclass="field-error" th:field="*{studentAddress}"
-                       type="text">
+                       type="text" readonly>
+                    <button class="btn btn-primary" type="button" id="findAddress" style="margin-left: 1em; width: 8em">주소 찾기</button>
+                </div>
+                <div class="field-error" th:errors="*{studentAddress}"></div>
+
 
                 <label for="studentDetailedAddress"></label>
                 <input class="form-control" id="studentDetailedAddress" placeholder="상세 주소를 입력해 주세요"
                        th:errorclass="field-error" th:field="*{studentDetailedAddress}"
                        type="text">
+                <div class="field-error" th:errors="*{studentDetailedAddress}"></div>
+
 
                 <label for="studentParentPhoneNumber"></label>
-                <input class="form-control" id="studentParentPhoneNumber" placeholder="부모님 전화번호를 입력해 주세요" th:maxlength="11"
+                <input class="form-control" id="studentParentPhoneNumber" placeholder="부모님 전화번호를 입력해 주세요" th:maxlength="13"
                        th:errorclass="field-error" th:field="*{studentParentPhoneNumber}"
+                       oninput="autoHyphen(this)"
                        type="text">
+                <div class="field-error" th:errors="*{studentParentPhoneNumber}"></div>
+
 
                 <div class="error-message" th:if="${errorMessage}">
                     <p th:text="${errorMessage}"></p>
@@ -82,4 +100,7 @@
     </form>
 </div><!-- container-->
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script src="/js/Address.js"></script>
 </html>
