DDD_reFactoring(3), searchLogic, indexPage

--- a/scheduler/src/main/resources/templates/cert/authNum.html
+++ b/scheduler/src/main/resources/templates/cert/authNum.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/cert/authNumCheck}" th:object="${auth}">
+    <form method='post' role="form" th:action="@{/help/authNumCheck}" th:object="${auth}">
         <div class="py-2">
             <div class="header">
                 <br><br>
