--- a/scheduler/src/main/resources/templates/cert/changeEmail.html
+++ b/scheduler/src/main/resources/templates/cert/changeEmail.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/cert/updateEmail}" th:object="${emailEdit}">
+    <form method='post' role="form" th:action="@{/help/updateEmail}" th:object="${emailEdit}">
         <div class="py-2">
             <div class="header">
                 <br><br>
