--- a/scheduler/src/main/resources/templates/cert/changePassword.html
+++ b/scheduler/src/main/resources/templates/cert/changePassword.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/cert/updatePassword}" th:object="${pwdEdit}">
+    <form method='post' role="form" th:action="@{/help/updatePassword}" th:object="${pwdEdit}">
         <div class="py-2">
             <div class="header">
                 <br><br>
