--- a/scheduler/src/main/resources/templates/cert/findId.html
+++ b/scheduler/src/main/resources/templates/cert/findId.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/cert/sendUserId}" th:object="${account}">
+    <form method='post' role="form" th:action="@{/help/sendUserId}" th:object="${account}">
         <div class="py-2">
             <div class="header">
                 <br><br>
