--- a/scheduler/src/main/resources/templates/cert/findPwd.html
+++ b/scheduler/src/main/resources/templates/cert/findPwd.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/cert/findPwd}" th:object="${account}">
+    <form method='post' role="form" th:action="@{/help/findPwd}" th:object="${account}">
         <div class="py-2">
             <div class="header">
                 <br><br>
