--- a/scheduler/src/main/resources/templates/admin/teacherList.html
+++ b/scheduler/src/main/resources/templates/admin/teacherList.html
@@ -50,8 +50,8 @@
 
                 <thead id="header">
                 <tr>
+                    <th scope="col">교사 아이디</th>
                     <th scope="col">교사 이름</th>
-                    <th scope="col">이름</th>
                     <th scope="col">승인 상태</th>
                     <th scope="col">승인</th>
                     <th scope="col">승인 취소</th>
