--- a/scheduler/src/main/resources/templates/class/findClass.html
+++ b/scheduler/src/main/resources/templates/class/findClass.html
@@ -58,6 +58,7 @@
                     <input name="studentName" th:value="${studentName}" type="hidden">
                     <p th:text="${studentName}"></p>
                 </div>
+                <div class="field-error" th:text="${error}"></div>
             </div>
         </div>
         <!--요일-->
