--- a/scheduler/src/main/resources/templates/admin/teacherList.html
+++ b/scheduler/src/main/resources/templates/admin/teacherList.html
@@ -33,21 +33,22 @@
     <div class="py-2">
         <div class="board rounded-3 border border-2">
         <div th:object="${teacherList}">
-            <table>
-                <tr>
-                    <th><a th:href ="@{/manage/class}"><button class="btn btn-primary"
-                                                         sec:authorize="isAuthenticated()">수업 관리</button></a></th>
-                    <th><a th:href ="@{/admin/changePassword}"><button class="btn btn-primary text-end"
-                                                                      sec:authorize="isAuthenticated()">비밀번호 변경</button></a></th>
-                    <th><a th:href ="@{/admin/changeEmail}"><button class="btn btn-primary"
-                                                                   sec:authorize="isAuthenticated()">이메일 변경</button></a></th>
-                    <th><a th:href ="@{/logout}"><button class="btn btn-primary"
-                                                         sec:authorize="isAuthenticated()">Logout</button></a></th>
-                </tr>
-            </table>
+            <div class="d-flex justify-content-between">
+                <table>
+                    <tr>
+                        <th><a th:href ="@{/manage/class}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">수업 관리</button></a></th>
+                        <th><a th:href ="@{/logout}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">Logout</button></a></th>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <th><a th:href ="@{/admin/changePassword}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">비밀번호 변경</button></a></th>
+                        <th><a th:href ="@{/admin/changeEmail}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">이메일 변경</button></a></th>
+                    </tr>
+                </table>
+            </div>
             <table class="table caption-top table-responsive" id="jb-table">
                 <caption>List of users</caption>
-
                 <thead id="header">
                 <tr>
                     <th scope="col">교사 아이디</th>
