--- a/scheduler/src/main/resources/templates/manage/class.html
+++ b/scheduler/src/main/resources/templates/manage/class.html
@@ -31,20 +31,21 @@
     <div class="py-2">
         <div class="board rounded-3 border border-2">
         <div th:object="${classList}">
-            <table>
-                <tr>
-                    <th><a th:href ="@{/admin/teacherList}"><button class="btn btn-primary"
-                                                                    sec:authorize="hasRole('ROLE_ADMIN')">교사 관리</button></a></th>
-                    <th><a th:href ="@{/help/changeEmail}"><button class="btn btn-primary"
-                                                                   sec:authorize="hasRole('ROLE_TEACHER')">이메일 변경</button></a></th>
-                    <th><a th:href ="@{/help/changePassword}"><button class="btn btn-primary"
-                                                                       sec:authorize="hasRole('ROLE_TEACHER')">비밀번호 변경</button></a></th>
-                    <th><a th:href ="@{/manage/studentList}"><button class="btn btn-primary"
-                                                         sec:authorize="isAuthenticated()">학생 명부</button></a></th>
-                    <th><a th:href ="@{/logout}"><button class="btn btn-primary"
-                                                         sec:authorize="isAuthenticated()">Logout</button></a></th>
-                </tr>
-            </table>
+            <div class="d-flex justify-content-between">
+                <table>
+                    <tr>
+                        <th><a th:href ="@{/admin/teacherList}"><button class="btn btn-primary" sec:authorize="hasRole('ROLE_ADMIN')">교사 관리</button></a></th>
+                        <th><a th:href ="@{/manage/studentList}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">학생 명부</button></a></th>
+                        <th><a th:href ="@{/logout}"><button class="btn btn-primary" sec:authorize="isAuthenticated()">Logout</button></a></th>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <th><a th:href ="@{/help/changeEmail}"><button class="btn btn-primary" sec:authorize="hasRole('ROLE_TEACHER')">이메일 변경</button></a></th>
+                        <th><a th:href ="@{/help/changePassword}"><button class="btn btn-primary" sec:authorize="hasRole('ROLE_TEACHER')">비밀번호 변경</button></a></th>
+                    </tr>
+                </table>
+            </div>
             <table class="table caption-top table-responsive" id="jb-table">
             <caption>List of users</caption>
             <thead id="header">
